fixed alignments

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,7 @@ body {
 
 @layer base {
   html {
-    font-family: 'CabinetGrotesk-Variable', sans-serif;
+    font-family: 'GeneralSans-Variable', sans-serif;
   }
 }
 
@@ -22,6 +22,16 @@ body {
     url('../public/fonts/CabinetGrotesk-Variable.woff2') format('.woff2'),
     url('../public/fonts/CabinetGrotesk-Variable.woff') format('.woff'),
     url('../public/fonts/CabinetGrotesk-Variable.ttf') format('truetype');
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'GeneralSans-Variable';
+  src:
+    url('../public/fonts/GeneralSans-Variable.woff2') format('.woff2'),
+    url('../public/fonts/GeneralSans-Variable.woff') format('.woff'),
+    url('../public/fonts/GeneralSans-Variable.ttf') format('truetype');
   font-display: swap;
   font-style: normal;
 }
